objects/adapps__OptimizerPlus_Custom_Perm_Sets_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Custom_Permission_Set__c</fullName>
        <label>Custom Permission Set</label>
        <referenceTo>adapps__OptimizerPlus_Custom_Perm_Sets__c</referenceTo>
        <relationshipLabel>Custom Permission Set Items</relationshipLabel>
        <relationshipName>Custom_Permission_Set_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Permission_Set_Name__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Custom Permission Set Item</label>
    <nameField>
        <label>Permission Set Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Permission Set Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>